--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build", "setuptools", "wheel", "ninja"]
+requires = ["scikit-build", "setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
