feat(build): Implement robust Termux build process
This commit introduces a series of improvements to the CMake build system to enable a reliable, automated 'pip install' experience on Termux.

The key changes are:

- **Automated Dependency Installation:** The build script now uses 'pkg' to automatically install system dependencies like 'espeak', 'python-onnxruntime', 'autoconf', and 'automake'.
- **Local 'espeak-ng' Build:** To ensure ABI compatibility and version consistency, 'espeak-ng' is now cloned and built from source as an external project during the build process.
- **Correct 'ExternalProject' Handling:** The 'ExternalProject_Add' command for 'espeak-ng' has been corrected to ensure that the 'configure' and 'make' commands are run in the correct directories.
- **Fixed Data Installation:** A timing issue with the installation of 'espeak-ng-data' has been resolved by using a 'PRE_BUILD' custom command to copy the data before the main 'piper' library is compiled.
- **Updated Documentation:** The 'docs/BUILDING.md' file has been significantly updated to reflect the new automated build process ("Plan A") and to provide a relevant and effective troubleshooting guide ("Plan B").

These changes collectively achieve the goal of a "go for coffee" installation experience on Termux, where a user can simply run 'pip install .' and have the build process handle all the complexities of the native dependencies.

--- a/libpiper/CMakeLists.txt
+++ b/libpiper/CMakeLists.txt
@@ -35,11 +35,11 @@ install(
 
 
 
-# Copy espeak-ng-data
-set(ESPEAKNG_DATA_SRC ${CMAKE_BINARY_DIR}/espeak_ng-install/share/espeak-ng-data)
-set(ESPEAKNG_DATA_DST ${CMAKE_INSTALL_PREFIX}/espeak-ng-data)
-
-install(
-    DIRECTORY ${ESPEAKNG_DATA_SRC}
-    DESTINATION ${CMAKE_INSTALL_PREFIX}
+# Copy espeak-ng-data during the build
+add_custom_command(
+    TARGET piper PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    "${CMAKE_BINARY_DIR}/espeak-ng-install/share/espeak-ng-data"
+    "${CMAKE_INSTALL_PREFIX}/espeak-ng-data"
+    COMMENT "Copying espeak-ng-data"
 )
