--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,9 @@ espeak-ng-data/
 _skbuild/
 *.egg-info/
 
-src/piper/train/vits/monotonic_align/core.c
+#src/piper/train/vits/monotonic_align/core.c
 *.so
 
 lightning_logs/
 espeak-ng/
-output.wav
 third-party/
