--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [build-system]
-requires = ["scikit-build", "setuptools", "wheel", "cmake", "ninja"]
+requires = ["scikit-build", "setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
 exclude = '''
 (
-    \.pyi$
+    \.pyi$|
+    test_.*\.py$
 )
 '''
