read from file, stdin, or commandline

--- a/piper-speak/CMakeLists.txt
+++ b/piper-speak/CMakeLists.txt
@@ -2,6 +2,8 @@
 cmake_minimum_required(VERSION 3.26)
 project(piper-speak LANGUAGES CXX)
 
+set(SOURCE_FILES piper-speak.cpp audio.cpp)
+
 set(LIBPIPER_DIR ${CMAKE_BINARY_DIR}/../../libpiper/install)
 
 ### set the dependencies as described in ROOT/libpiper/README.md
@@ -14,10 +16,7 @@ set(ESPEAK_NG_DATA=${LIBPIPER_DIR}/espeak-ng-data/)
 #We also need the path to the voices: the .onnx and the .onnx.json
 set(VOICES_DIR ${CMAKE_BINARY_DIR}/../download/voices)
 
-### With the variables set, we now hook them up to CMAKE
-
-#piper.h header
-include_directories(${PIPER_HEADER})
+### Actually find the libraries
 
 #link libpiper
 find_library(LIBPIPER
@@ -41,19 +40,31 @@ if(NOT ONNXRUNTIME)
 	message(FATAL_ERROR "Could not find onnxruntime in ${ONNX_LIB_DIR}")
 endif()
 
-#tell the code where ESPEAK_NG_DATA is located
-add_definitions(-DBUILD_ENV_ESPEAK_NG_DATA=\"${ESPEAK_EN_DATA}\")
+# We depend on pcaudiolib for audio output
+# since we already depend on espeak-ng and espeak-ng generally depends on pcaudiolib
+# this shouldn't add additional dependences. 
+# though currently we bundle espeak-ng while this looks for system pcaudiolib
+find_library(PCAUDIO_LIB
+	NAMES pcaudio
+	)
 
-#tell the code where the voices are located
-add_definitions(-DBUILD_ENV_VOICES_PATH=\"${VOICES_DIR}\")
+find_path(PCAUDIO_INCLUDE
+	NAMES pcaudiolib/audio.h
+	)
 
-
-### we are done for the most part with the README steps
-
-add_executable(${PROJECT_NAME} piper-speak.cpp)
+### create the target and configure it
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${PIPER_HEADER})
+target_include_directories(${PROJECT_NAME} PRIVATE ${PCAUDIO_INCLUDE})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBPIPER})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${ONNXRUNTIME})
-
+target_link_libraries(${PROJECT_NAME} PRIVATE ${PCAUDIO_LIB})
+target_compile_definitions(${PROJECT_NAME}
+	#tell the code where ESPEAK_NG_DATA is located
+	PRIVATE -DBUILD_ENV_ESPEAK_NG_DATA=\"${ESPEAK_EN_DATA}\"
+	#tell the code where the voices are located
+	PRIVATE -DBUILD_ENV_VOICES_PATH=\"${VOICES_DIR}\"
+)
 #we use c++17 to get the std::filesystem header
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
