--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,9 @@ ignore_missing_imports = True
 
 [mypy-lightning.*]
 ignore_missing_imports = True
+
+[mypy-sentence_stream.*]
+ignore_missing_imports = True
+
+[mypy-g2pM.*]
+ignore_missing_imports = True
