--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ exclude = '''
     \.pyi$
 )
 '''
+
+[tool.pytest.ini_options]
+disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
