--- a/mypy.ini
+++ b/mypy.ini
@@ -16,5 +16,5 @@ ignore_missing_imports = True
 [mypy-sentence_stream.*]
 ignore_missing_imports = True
 
-[mypy-g2pM.*]
+[mypy-g2pw.*]
 ignore_missing_imports = True
