--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -116,9 +116,11 @@ jobs:
           path: dist
 
       - name: Install wheel
+        env:
+          TAG: ${{ needs.build.outputs.file_ver }}
         run: |
           python -m pip install pytest
-          python -m pip install --only-binary :all: --find-links dist/ 'piper-tts[zh]'
+          python -m pip install --only-binary :all: --find-links dist/ "piper-tts[zh]==${VER}"
 
       - name: Test wheel
         run: |
