--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -117,7 +117,7 @@ jobs:
 
       - name: Install wheel
         env:
-          TAG: ${{ needs.build.outputs.file_ver }}
+          VER: ${{ needs.build.outputs.file_ver }}
         run: |
           python -m pip install pytest
           python -m pip install --only-binary :all: --find-links dist/ "piper-tts[zh]==${VER}"
