--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -120,7 +120,7 @@ jobs:
           VER: ${{ needs.build.outputs.file_ver }}
         run: |
           python -m pip install pytest
-          python -m pip install --only-binary :all: --find-links dist/ "piper-tts[zh]==${VER}"
+          python -m pip install --extra-index-url 'https://download.pytorch.org/whl/cpu' --find-links dist/ "piper-tts[zh]==${VER}"
 
       - name: Test wheel
         run: |
